force-app/main/default/objects/PricebookEntry/fields/Applied_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Postal_Code__c</fullName>
    <formula>Product2.Applied_to_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied to Postal Code</label>
    <type>Checkbox</type>
</CustomField>