force-app/main/default/objects/PricebookEntry/fields/Fixed_Fee_Level_10__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee_Level_10__c</fullName>
    <label>Fixed Fee Level 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>