force-app/main/default/objects/PricebookEntry/fields/Opening_Closing_Product__c.field-meta.xml
<CustomField>
    <fullName>Opening_Closing_Product__c</fullName>
    <formula>AND(Product2.Opening_Closing_Product__c,Product2.IsActive)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Closing Product</label>
    <type>Checkbox</type>
</CustomField>