force-app/main/default/objects/PricebookEntry/fields/Product_Sage_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Sage_Id__c</fullName>
    <formula>Product2.Sage_ID__c</formula>
    <label>Product Sage Id</label>
    <type>Text</type>
</CustomField>