force-app/main/default/objects/PricebookEntry/fields/Product_Sage_Id_And_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Sage_Id_And_Name__c</fullName>
    <formula>Product2.Sage_ID__c + &apos; &apos; +  Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sage Id And Name</label>
    <type>Text</type>
</CustomField>