force-app/main/default/objects/PricebookEntry/fields/Spa_Size__c.field-meta.xml
<CustomField>
    <fullName>Spa_Size__c</fullName>
    <formula>TEXT( Product2.Spa_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Size</label>
    <type>Text</type>
</CustomField>