force-app/main/default/objects/PricebookEntry/fields/Spa_Size_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Spa_Size_Grouped__c</fullName>
    <formula>IF( 
OR(Spa_Size__c = &apos;size13&apos;,Spa_Size__c = &apos;size16&apos;,Spa_Size__c = &apos;size17&apos;),
&apos;Small spa&apos;,
&apos;Big spa&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Size Grouped</label>
    <type>Text</type>
</CustomField>