force-app/main/default/objects/PricebookEntry/fields/Spa_Type__c.field-meta.xml
<CustomField>
    <fullName>Spa_Type__c</fullName>
    <formula>TEXT(Product2.Spa_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Type</label>
    <type>Text</type>
</CustomField>